2차 수정 버튼고침

--- a/first-team-projects/3조 요금제.html
+++ b/first-team-projects/3조 요금제.html
@@ -33,21 +33,23 @@
             <h2>매월 최소 9900원입니다(VAT포함) <br>
             언제든 해지 가능합니다</h2>
             <div class="bu">
-                <button><a href="#">0원으로 프리미엄 체험하기</a></button>
-                <button><a href="#">요금제 보기</a></button>
+                <a href="#"><button>0원으로 프리미엄 체험하기</button></a>
+                <a href="#"><button>요금제 보기</button></a>
             </div>
         </main>
 
         <!-- 푸터 -->
         <footer>
-            <h1>궁금한 것이 있다면 무엇이든 물어보세요</h1>
-            <h2>성실히 답변 드리겠습니다</h2>
-            <ul>
-                <li><h3>Premium이 무엇인가요?</h3></li><hr>
-                <li><h3>무료로 이용 해볼 수 있나요?</h3></li><hr>
-                <li><h3>프로모션 기간이 종료되기 전에 Premium을 해지할 수 있나요?</h3></li><hr>
-                <li><h3>백그라운드 재생이 가능한가요?</h3></li><hr>
-            </ul>       
+            <div class="qa">
+                <h1>궁금한 것이 있다면 무엇이든 물어보세요</h1>
+                <h2>성실히 답변 드리겠습니다</h2>
+                <ul>
+                    <li><h3>Premium이 무엇인가요?</h3></li><hr>
+                    <li><h3>무료로 이용 해볼 수 있나요?</h3></li><hr>
+                    <li><h3>프로모션 기간이 종료되기 전에 Premium을 해지할 수 있나요?</h3></li><hr>
+                    <li><h3>백그라운드 재생이 가능한가요?</h3></li><hr>
+                </ul>
+            </div>       
         </footer>
     </div>
 </body>
