--- a/240130/06_flex.html
+++ b/240130/06_flex.html
@@ -8,6 +8,7 @@
       section {
         display: flex; /* 부모요소에서 입력 */
         /* 블록요소를 인라인 요소로 변경 */
+        justify-content: space-between;
 
         /* 주축 */
         /* justify-content: space-around; /* 같은 공백으로 정렬(양끝 공백 포함x) */
