--- a/240130/07_flex_practice5.html
+++ b/240130/07_flex_practice5.html
@@ -28,6 +28,11 @@
         position: absolute;
         margin: 0;
       }
+      main {
+        border: 1px solid gray;
+        display: flex;
+        justify-content: space-around;
+      }
     </style>
   </head>
   <body>
@@ -36,5 +41,10 @@
       <div class="box2">박스2</div>
       <div class="box3">박스3</div>
     </section>
+    <main>
+      <dv class="box4">box4</dv>
+      <dv class="box5">box5</dv>
+      <dv class="box6">box6</dv>
+    </main>
   </body>
 </html>
