링크 테스트

--- a/3조 요금제.html
+++ b/3조 요금제.html
@@ -10,9 +10,10 @@
     <div class="container">
         <!-- 헤더 -->
         <!-- 좌측에 로고 중앙에 검색창 우측에 로그인 링크 -->
+        <!-- 로고 이미지 파일 필요 -->
         <header>
             <div class="logo">
-                <a href="#"><img src="../images/html logo.png" alt="" width="75px"></a>
+                <a href="index.html"><img src="#" alt="" width="75px"></a>
             </div>
             <div class="search">
                 <form action="search.php" method="post">
@@ -44,30 +45,35 @@
         <!-- 요금제 섹션 -->
         <section>
             <h1>요금제 선택하기</h1>
-            <div class="plan1">
-                <h3>Premium</h3>
-                <p>체험 기간 이후 매월 13,900원 정기결제
-                <br>(부가세 포함)
-                </p>
-                <hr>
-                <ul>
-                    <li>무광고로 음악감상</li>
-                    <li>다운로드하여 오프라인 감상</li>
-                    <li>맞춤 플레이리스트</li>
-                    <li>1억 여개의 곡 감상</li>
-                    <li>여러 디바이스에서 감상</li>
-                </ul>
-                <a href="#"><button>0원으로 프리미엄 체험하기</button></a>
-            <div class="plan2">
-                <h3>Basic</h3>
-                <p>매월 9,900원 정기결제(부가세포함)</p>
-                <hr>
-                <ul>
-                    <li>무광고로 음악감상</li>
-                    <li>맞춤 플레이리스트</li>
-                    <li>1억 여개의 곡 감상</li>
-                </ul>
-                <a href="#"><button>0원으로 프리미엄 체험하기</button></a>
+            <div class="rate">
+                <div class="plan1">
+                    <h3>Premium</h3>
+                    <p>체험 기간 이후 매월 13,900원 정기결제
+                    <br>(부가세 포함)
+                    </p><br>
+                    <hr>
+                    <br>
+                    <ul>
+                        <li>무광고로 음악감상</li>
+                        <li>다운로드하여 오프라인 감상</li>
+                        <li>맞춤 플레이리스트</li>
+                        <li>1억 여개의 곡 감상</li>
+                        <li>여러 디바이스에서 감상</li>
+                    </ul>
+                    <a href="index.html"><button>0원으로 프리미엄 체험하기</button></a>
+                </div>    
+                <div class="plan2">
+                    <h3>Basic</h3>
+                    <p>매월 9,900원 정기결제(부가세포함)</p><br>
+                    <hr>
+                    <br>
+                    <ul>
+                        <li>무광고로 음악감상</li>
+                        <li>맞춤 플레이리스트</li>
+                        <li>1억 여개의 곡 감상</li>
+                    </ul>
+                    <a href="#"><button>0원으로 프리미엄 체험하기</button></a>
+                </div>
             </div>
         </section>
 
@@ -109,5 +115,5 @@
 
 </body>
 
-<!-- ㅁㅇㄴㄻㄴㄻㄴㄹㅇ 좀되라 좀 -->
+
 </html>
