--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>project practice</title>
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap') * {
+           @import url(https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap);
+
+            * {
                 margin: 0;
                 padding: 0;
             }
