--- a/3조 요금제.html
+++ b/3조 요금제.html
@@ -38,16 +38,17 @@
             언제든 해지 가능합니다</h2>
             <div class="bu">
                 <a href="#"><button>0원으로 프리미엄 체험하기</button></a>
-                <a href="#"><button>요금제 보기</button></a>
+                <a href="#rat"><button>요금제 보기</button></a>
             </div>
         </main>
 
         <!-- 요금제 섹션 -->
         <section>
             <h1>요금제 선택하기</h1>
+            <a href="" id="rat">이동</a>
             <div class="rate">
                 <div class="plan1">
-                    <h3>Premium</h3>
+                    <h3 class="event">Premium</h3><br>
                     <p>체험 기간 이후 매월 13,900원 정기결제
                     <br>(부가세 포함)
                     </p><br>
@@ -60,10 +61,12 @@
                         <li>1억 여개의 곡 감상</li>
                         <li>여러 디바이스에서 감상</li>
                     </ul>
-                    <a href="index.html"><button>0원으로 프리미엄 체험하기</button></a>
+                    <a href="#" class="l_b"><button>get started</button></a>
+                    <p class="announce">체험 기간 이후 매월 정기 결제되고 <a href="#">이용 약관</a>이 적용됩니다. <br>
+                    Premium을 이용해 보셨다면 참여할수 없습니다.</p>
                 </div>    
                 <div class="plan2">
-                    <h3>Basic</h3>
+                    <h3>Basic</h3><br>
                     <p>매월 9,900원 정기결제(부가세포함)</p><br>
                     <hr>
                     <br>
@@ -72,7 +75,8 @@
                         <li>맞춤 플레이리스트</li>
                         <li>1억 여개의 곡 감상</li>
                     </ul>
-                    <a href="#"><button>0원으로 프리미엄 체험하기</button></a>
+                    <a href="#" class="l_b"><button>get started</button></a>
+                    <p class="announce"><a href="#">이용 약관</a>이 적용됩니다.</p>
                 </div>
             </div>
         </section>
