--- a/05_project_practice (1).html
+++ b/05_project_practice (1).html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>project practice</title>
     <style>
+
+/*       주석 ..... test */
       * {
         margin: 0;
         padding: 0;
