--- a/요금제(이현학).html
+++ b/요금제(이현학).html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>요금제 구매창</title>
-    <link rel="stylesheet" href="3조 요금제.css">
+    <link rel="stylesheet" href="요금제(이현학).css">
 </head>
 <body>
     <div class="container">
