--- a/조별과제/login.html
+++ b/조별과제/login.html
@@ -5,8 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap') * {
-            }
+            
+            @import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap');
+            
             body {
                 margin: 0;
                 padding: 0;
@@ -104,7 +105,7 @@
                     <input type="password" required />
                     <label>Password</label>
                 </div>
-                <div class="pass">Forgot password?</div>
+                <div class="pass"><a href="회원가입.html">membership</a></div>
                 <input type="submit" value="Login" />
             </form>
         </div>
