--- a/조별과제/음원사이트.html
+++ b/조별과제/음원사이트.html
@@ -287,7 +287,7 @@
                     <div class="membership">
                         <a href="#">membership</a>
                     </div>
-                    <a href="http://127.0.0.1:5500/%EC%A1%B0%EB%B3%84%EA%B3%BC%EC%A0%9C/login.html"
+                    <a href="login.html"
                         ><input type="submit" value="Login"
                     /></a>
                 </div>
