--- a/조별과제/차트.html
+++ b/조별과제/차트.html
@@ -9,6 +9,7 @@
             body {
                 width: 300px;
                 height: 500px;
+                
             }
             h1 {
                 text-align: center;
@@ -22,7 +23,7 @@
             .chart_box {
                 padding-left: 15px;
                 padding-top: 15px;
-                border: 1px solid;
+                border: 1px solid silver;
                 height: 500px;
                 width: 300px;
             }
@@ -40,6 +41,9 @@
             .name {
                 font-size: small;
                 color: silver;
+            }
+            .music_box {
+                margin-left: 10px;
             }
         </style>
     </head>
@@ -65,22 +69,7 @@
             <div class="chart_box1">
                 <div class="img">
                     <img
-                        src="https://cdnimg.melon.co.kr/cm2/album/images/114/04/142/11404142_20240123172248_500.jpg?6c9dde4b44f3625b764f4c9d454a6ad5/melon/resize/282/quality/80/optimize"
-                        alt=""
-                        width="50px"
-                    />
-                </div>
-                <div class="music_box">
-                    <label class="music"><a href="#">Love wins all</a></label
-                    ><br />
-                    <label class="name"><a href="#">아이유</a></label>
-                </div>
-            </div>
-
-            <div class="chart_box1">
-                <div class="img">
-                    <img
-                        src="https://cdnimg.melon.co.kr/cm2/album/images/114/04/142/11404142_20240123172248_500.jpg?6c9dde4b44f3625b764f4c9d454a6ad5/melon/resize/282/quality/80/optimize"
+                        src="https://cdnimg.melon.co.kr/cm2/album/images/113/72/896/11372896_20231127104957_500.jpg?9ecd4c6c7ed241174aa1a5c27c4ba3c6/melon/resize/282/quality/80/optimize"
                         alt=""
                         width="50px"
                     />
@@ -88,97 +77,112 @@
                 <div class="music_box">
                     <label class="music"><a href="#">To. X</a></label
                     ><br />
-                    <label class="name"><a href="#">아이유</a></label>
+                    <label class="name"><a href="#">태연</a></label>
                 </div>
             </div>
 
             <div class="chart_box1">
                 <div class="img">
                     <img
-                        src="https://cdnimg.melon.co.kr/cm2/album/images/114/04/142/11404142_20240123172248_500.jpg?6c9dde4b44f3625b764f4c9d454a6ad5/melon/resize/282/quality/80/optimize"
+                        src="https://cdnimg.melon.co.kr/cm2/album/images/113/76/816/11376816_20231201120653_500.jpg?54e243dd4f188d67c0742fa334acb512/melon/resize/282/quality/80/optimize"
                         alt=""
                         width="50px"
                     />
                 </div>
                 <div class="music_box">
-                    <label class="music"><a href="#">Love wins all</a></label
+                    <label class="music"><a href="#">비의 랩소디</a></label
                     ><br />
-                    <label class="name"><a href="#">아이유</a></label>
+                    <label class="name"><a href="#">임재현</a></label>
                 </div>
             </div>
 
             <div class="chart_box1">
                 <div class="img">
                     <img
-                        src="https://cdnimg.melon.co.kr/cm2/album/images/114/04/142/11404142_20240123172248_500.jpg?6c9dde4b44f3625b764f4c9d454a6ad5/melon/resize/282/quality/80/optimize"
+                        src="https://cdnimg.melon.co.kr/cm2/album/images/113/94/065/11394065_20240104151541_500.jpg?04606c8703e5996ebf5ba36dcb1213e1/melon/resize/282/quality/80/optimize"
                         alt=""
                         width="50px"
                     />
                 </div>
                 <div class="music_box">
-                    <label class="music"><a href="#">Love wins all</a></label
+                    <label class="music"><a href="#">Love 119</a></label
                     ><br />
-                    <label class="name"><a href="#">아이유</a></label>
+                    <label class="name"><a href="#">Riize</a></label>
                 </div>
             </div>
 
             <div class="chart_box1">
                 <div class="img">
                     <img
-                        src="https://cdnimg.melon.co.kr/cm2/album/images/114/04/142/11404142_20240123172248_500.jpg?6c9dde4b44f3625b764f4c9d454a6ad5/melon/resize/282/quality/80/optimize"
+                        src="https://cdnimg.melon.co.kr/cm2/album/images/113/52/904/11352904_20231027101104_500.jpg/melon/quality/80/resize/48/optimize"
                         alt=""
                         width="50px"
                     />
                 </div>
                 <div class="music_box">
-                    <label class="music"><a href="#">Love wins all</a></label
+                    <label class="music"><a href="#">Perfect Night</a></label
                     ><br />
-                    <label class="name"><a href="#">아이유</a></label>
+                    <label class="name"><a href="#">르세라핌</a></label>
                 </div>
             </div>
 
             <div class="chart_box1">
                 <div class="img">
                     <img
-                        src="https://cdnimg.melon.co.kr/cm2/album/images/114/04/142/11404142_20240123172248_500.jpg?6c9dde4b44f3625b764f4c9d454a6ad5/melon/resize/282/quality/80/optimize"
+                        src="https://cdnimg.melon.co.kr/cm2/album/images/113/82/987/11382987_20231212165916_500.jpg/melon/quality/80/resize/48/optimize"
                         alt=""
                         width="50px"
                     />
                 </div>
                 <div class="music_box">
-                    <label class="music"><a href="#">Love wins all</a></label
+                    <label class="music"><a href="#">에피소드</a></label
                     ><br />
-                    <label class="name"><a href="#">아이유</a></label>
+                    <label class="name"><a href="#">이무진</a></label>
                 </div>
             </div>
 
             <div class="chart_box1">
                 <div class="img">
                     <img
-                        src="https://cdnimg.melon.co.kr/cm2/album/images/114/04/142/11404142_20240123172248_500.jpg?6c9dde4b44f3625b764f4c9d454a6ad5/melon/resize/282/quality/80/optimize"
+                        src="https://cdnimg.melon.co.kr/cm2/album/images/113/62/544/11362544_20231110142622_500.jpg/melon/quality/80/resize/48/optimize"
                         alt=""
                         width="50px"
                     />
                 </div>
                 <div class="music_box">
-                    <label class="music"><a href="#">Love wins all</a></label
+                    <label class="music"><a href="#">Drama</a></label
                     ><br />
-                    <label class="name"><a href="#">아이유</a></label>
+                    <label class="name"><a href="#">aespa</a></label>
                 </div>
             </div>
 
             <div class="chart_box1">
                 <div class="img">
                     <img
-                        src="https://cdnimg.melon.co.kr/cm2/album/images/114/04/142/11404142_20240123172248_500.jpg?6c9dde4b44f3625b764f4c9d454a6ad5/melon/resize/282/quality/80/optimize"
+                        src="https://cdnimg.melon.co.kr/cm2/album/images/113/05/759/11305759_20230814111006_500.jpg/melon/quality/80/resize/48/optimize"
                         alt=""
                         width="50px"
                     />
                 </div>
                 <div class="music_box">
-                    <label class="music"><a href="#">Love wins all</a></label
+                    <label class="music"><a href="#">그대만 있다면..</a></label
                     ><br />
-                    <label class="name"><a href="#">아이유</a></label>
+                    <label class="name"><a href="#">너드커넥션</a></label>
+                </div>
+            </div>
+
+            <div class="chart_box1">
+                <div class="img">
+                    <img
+                        src="https://cdnimg.melon.co.kr/cm2/album/images/112/27/533/11227533_20230419162238_500.jpg?f2aaefe2470b9694d40b0ad16df118a6/melon/resize/282/quality/80/optimize"
+                        alt=""
+                        width="50px"
+                    />
+                </div>
+                <div class="music_box">
+                    <label class="music"><a href="#">헤어지자 말해요</a></label
+                    ><br />
+                    <label class="name"><a href="#">박재정</a></label>
                 </div>
             </div>
         </div>
