스크립트추가

--- a/사이드바 수정본.html
+++ b/사이드바 수정본.html
@@ -30,6 +30,9 @@
 
                 font-weight: bold;
             }
+        aside i{
+            font-size: 10px;
+        }
     </style>
     <script src="https://kit.fontawesome.com/4ec79785b5.js" crossorigin="anonymous"></script>
 
@@ -39,10 +42,10 @@
         <ul>
             <span class="s_1">사이드바</span>
             <hr />
-            <li><a href="#">최신 앨범</a></li>
-            <li><a href="#">장르 음악</a></li>
-            <li><a href="#">뮤직 비디오</a></li>
-            <li><a href="#">연도별</a></li>
+            <li><i class="fa-solid fa-music"></i><a href="#">최신 앨범</a></li>
+            <li><i class="fa-solid fa-play"></i><a href="#">장르 음악</a></li>
+            <li><i class="fa-solid fa-fire"></i><a href="#">뮤직 비디오</a></li>
+            <li><i class="fa-solid fa-volume-high"></i><a href="#">연도별</a></li>
         </ul>
         <ul>
             <span class="s_1">마이뮤직</span>
