--- a/index수정_사이드.html
+++ b/index수정_사이드.html
@@ -526,3 +526,10 @@
     <div id="gotobottom" />
   </body>
 </html>
+
+
+<!-- 수정사항 aside 고침 
+html 스타일에 있는 aside 탭 복붙해서 수정
+
+
+footer 튀어나온거 거슬리는건 더 건들면 답 없어서 그냥 width:1010px; 주는걸로-->
